Updating edit roles modal to allow editing multiple roles, hide some options from employees

--- a/Frontend/src/app/admin/admin-panel/admin-panel.component.html
+++ b/Frontend/src/app/admin/admin-panel/admin-panel.component.html
@@ -8,11 +8,11 @@
       <ng-template tabHeading><fa-icon [icon]="faCalendarAlt"></fa-icon> Rezerwacje</ng-template>
       <app-reservations-list *ngIf="tabs.tabs[1].active"></app-reservations-list>
     </tab>
-    <tab>
+    <tab *appHasRole="['Administrator']">
       <ng-template tabHeading><fa-icon [icon]="faObjectsGroup"></fa-icon> Sale</ng-template>
       <app-rooms-manager *ngIf="tabs.tabs[2].active"></app-rooms-manager>
     </tab>
-    <tab>
+    <tab *appHasRole="['Administrator']">
       <ng-template tabHeading><fa-icon [icon]="faClock"></fa-icon> Godziny otwarcia</ng-template>
       <app-opening-hours *ngIf="tabs.tabs[3].active"></app-opening-hours>
     </tab>
