--- a/Frontend/src/app/admin/edit-role/edit-role.component.html
+++ b/Frontend/src/app/admin/edit-role/edit-role.component.html
@@ -1,20 +1,16 @@
 <div class="modal-content">
   <div class="modal-header" style="background: #393535;">
-    <h5 class="col-12 modal-title text-center" style="color: white;">{{user.email}}<br>Zmień rolę:</h5>
+    <h5 class="col-12 modal-title text-center" style="color: white;">{{ user.email }}<br />Zmień rolę:</h5>
   </div>
   <div class="modal-body">
-    <div class="row justify-content-around">
-      <div class="btn-group" dropdown>
-        <button id="button-animated" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
-                aria-controls="dropdown-animated">
-           {{currentChosenRole |translate}} <span class="caret"></span>
-        </button>
-        <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu"
-            role="menu" aria-labelledby="button-animated">
-          <li *ngFor="let role of rolesList" role="menuitem"><a (click)="changeCurrentRole(role)" class="dropdown-item">{{role|translate}}</a></li>
-        </ul>
+    <div *ngFor="let role of rolesList" class="row justify-content-center">
+      <div class="col-8">
+        {{ role.name | translate }}
       </div>
-      <button type="button" (click)="confirmRoleChange()" class="btn btn-success">Zatwierdź</button>
+      <div class="col-4">
+        <ui-switch [(ngModel)]="role.haveIt"></ui-switch>
+      </div>
     </div>
+    <button type="button" (click)="confirmRoleChange()" class="btn btn-success">Zatwierdź</button>
   </div>
 </div>
