room tables user activation/deactivation

--- a/Frontend/src/app/admin/add-reservation-modal/add-reservation-modal.component.html
+++ b/Frontend/src/app/admin/add-reservation-modal/add-reservation-modal.component.html
@@ -25,6 +25,7 @@
             [minuteStep]="15"
             [(ngModel)]="reservation.start"
             [showMeridian]="false"
+            [showSpinners]="false"
           ></timepicker>
         </div>
         <div class="form-group">
@@ -35,6 +36,7 @@
             [minuteStep]="15"
             [(ngModel)]="reservation.end"
             [showMeridian]="false"
+            [showSpinners]="false"
           ></timepicker>
         </div>
         <div class="form-group row">
