--- a/Frontend/src/app/admin/rooms-manager/rooms-manager.component.html
+++ b/Frontend/src/app/admin/rooms-manager/rooms-manager.component.html
@@ -33,7 +33,7 @@
       <div class="card mt-2 mr-3" *ngFor="let table of allTables">
         <div class="card-body">
           <div class="row">
-            <label class="ml-3 mt-auto">Etykieta:</label
+            <label class="ml-3">Etykieta:</label
             ><input
               type="text"
               [(ngModel)]="table.label"
@@ -47,6 +47,7 @@
               [icon]="faTimes"
             ></fa-icon>
           </div>
+
           <div class="row justify-content-around">
             <div class="col-5">
               X:
@@ -71,6 +72,10 @@
             <div class="col-6 text-center">
               Pionowy:
               <ui-switch [(ngModel)]="table.verticalOrientation" (ngModelChange)="draw()" size="small"></ui-switch>
+            </div>
+            <div class="col-6 text-center">
+              Aktywny:
+              <ui-switch [(ngModel)]="table.active" (ngModelChange)="draw()" size="small"></ui-switch>
             </div>
           </div>
         </div>
