--- a/Frontend/src/app/admin/admin-panel/admin-panel.component.html
+++ b/Frontend/src/app/admin/admin-panel/admin-panel.component.html
@@ -16,5 +16,13 @@
       <ng-template tabHeading><fa-icon [icon]="faClock"></fa-icon> Godziny otwarcia</ng-template>
       <app-opening-hours *ngIf="tabs.tabs[3].active"></app-opening-hours>
     </tab>
+    <tab *appHasRole="['Administrator']">
+      <ng-template tabHeading><fa-icon [icon]="faHome"></fa-icon> Strona główna</ng-template>
+      <app-home-page-manager *ngIf="tabs.tabs[4].active"></app-home-page-manager>
+    </tab>
+    <tab *appHasRole="['Administrator']">
+      <ng-template tabHeading><fa-icon [icon]="faImages"></fa-icon> Zdjęcia</ng-template>
+      <app-photos-manager *ngIf="tabs.tabs[5].active"></app-photos-manager>
+    </tab>
   </tabset>
 </div>
