--- a/Frontend/src/app/admin/reports/reports.component.html
+++ b/Frontend/src/app/admin/reports/reports.component.html
@@ -7,6 +7,8 @@
       <button class="btn btn-secondary btn-lg mr-2" id="reservationStatus"
         (click)="getReport('reservationStatus')">Status
         Rezerwacji</button>
+      <button class="btn btn-secondary btn-lg mr-2" id="hours" (click)="getReport('hours')">Godziny</button>
+      <button class="btn btn-secondary btn-lg mr-2" id="weekDays" (click)="getReport('weekDays')">Dni Tygodnia</button>
     </div>
   </div>
   <div class="row justify-content-center">
