--- a/Frontend/src/app/admin/reports/reports.component.html
+++ b/Frontend/src/app/admin/reports/reports.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row m-4">
     <div class="mx-auto">
-      <button class="btn btn-secondary btn-lg mr-2" id="userId" (click)="getReport('userId')">ID Użytkownika</button>
-      <button class="btn btn-secondary btn-lg mr-2" id="pingPongTableId" (click)="getReport('pingPongTableId')">ID
-        Stołu</button>
+      <button class="btn btn-secondary btn-lg mr-2" id="userId" (click)="getReport('userId')">Klienci</button>
+      <button class="btn btn-secondary btn-lg mr-2" id="pingPongTableId"
+        (click)="getReport('pingPongTableId')">Stoły</button>
       <button class="btn btn-secondary btn-lg mr-2" id="reservationStatus"
-        (click)="getReport('reservationStatus')">Status
+        (click)="getReport('reservationStatus')">Statusy
         Rezerwacji</button>
       <button class="btn btn-secondary btn-lg mr-2" id="hours" (click)="getReport('hours')">Godziny</button>
       <button class="btn btn-secondary btn-lg mr-2" id="weekDays" (click)="getReport('weekDays')">Dni Tygodnia</button>
