--- a/Frontend/src/app/admin/reports/reports.component.html
+++ b/Frontend/src/app/admin/reports/reports.component.html
@@ -2,7 +2,7 @@
   <div class="row m-4">
     <div class="mx-auto">
       <button
-        style="background-color: rgb(40, 156, 71);"
+        style="background-color: rgb(79, 136, 209);"
         class="btn btn-primary btn-lg mr-2"
         id="userId"
         (click)="getReport('userId')"
@@ -11,31 +11,31 @@
       </button>
       <button
         style="background-color: rgb(79, 136, 209);"
-        class="btn btn-success btn-lg mr-2"
+        class="btn btn-primary btn-lg mr-2"
         id="pingPongTableId"
         (click)="getReport('pingPongTableId')"
       >
-        Obciążenie stołów
+        Obłożenie stołów
       </button>
       <button
-        style="background-color: rgb(129, 79, 209);"
-        class="btn btn-info btn-lg mr-2"
+        style="background-color: rgb(79, 136, 209);"
+        class="btn btn-primary btn-lg mr-2"
         id="reservationStatus"
         (click)="getReport('reservationStatus')"
       >
         Status rezerwacji
       </button>
       <button
-        style="background-color: rgb(252, 131, 83);"
-        class="btn btn-secondary btn-lg mr-2"
+        style="background-color: rgb(79, 136, 209);"
+        class="btn btn-primary btn-lg mr-2"
         id="hours"
         (click)="getReport('hours')"
       >
         Rozkład godzinowy
       </button>
       <button
-        style="background-color: rgb(255, 107, 107);"
-        class="btn btn-secondary btn-lg mr-2"
+        style="background-color: rgb(79, 136, 209);"
+        class="btn btn-primary btn-lg mr-2"
         id="weekDays"
         (click)="getReport('weekDays')"
       >
